# binance-square-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  auto_publish.py  docker-compose.yml  pyproject.toml
data/selectors/: binance_square.yaml
data/templates/visuals/: chart_card.html  profit_explosion.html  trade_card.html  warning_card.html
deploy/systemd/: binance-square-engine-dashboard.service  binance-square-engine.service
docs/: deploy_hostinger.md  dryrun_report.md  growth_intelligence.md  system_diagnosis.md
engine/: cli.py  config.py  dashboard.py  db.py  logging_setup.py  models.py
engine/analytics/: post_tracker.py  reports.py
engine/content/: cashtag_resolver.py  hook_generator.py  post_assembler.py  tendency_classifier.py
engine/distribution/: api_publisher.py  browser_publisher.py  publisher.py  rate_limiter.py  scheduler.py
engine/growth/: __init__.py  adaptive_scheduler.py  coin_priority_engine.py  growth_scorer.py  hook_intelligence.py  image_strategy_engine.py  reference_mimicry.py  safety_layer.py  self_optimizer.py
engine/learning/: prompt_updater.py  template_evaluator.py
engine/signal/: market_scanner.py  news_feed.py  opportunity_ranker.py  reference_feed.py  trend_scraper.py
engine/visuals/: card_renderer.py  chart_data.py  image_uploader.py  pipeline.py
playbooks/: burst_triggers.yaml  daily_schedule.yaml
prompts/: few_shot_examples.json  hook_arabic.txt
tests/: test_burst_rules.py  test_card_renderer.py  test_coin_priority.py  test_growth_scorer.py  test_hook_intelligence.py  test_hook_sanitiser.py  test_news_parser.py  test_rate_limiter.py  test_safety_layer.py  test_tendency_classifier.py
